<resources>
    <string name="app_name"> Finnotive </string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="con_pass">Re-Enter Password</string>
    <string name="reffercode">Referral Code</string>
    <string name="terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="login">Login</string>
    <string name="todo">Logo-MlM</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_dashboad">Dashboad</string>
    <string name="nav_header_title">Finnotive</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="helpdesk">Helpdesk</string>
    <string name="logout">Logout</string>
    <string name="refer_your_friends_to_earn_the_referral_money_click_here_to_invite">Refer your friends to earn the referral money. Click here to invite</string>
    <string name="reacharge_your_wallet_to_get_started">Recharge your wallet to get started.</string>
    <string name="purchase_the_shares_and_reap_the_benefits">Purchase the shares and reap the benefits!!!</string>
    <string name="join_group">Join Group</string>
    <string name="primary">PRIMARY</string>
    <string name="easy_steps_to_work_and_grow_with_finnotive_family">3 Easy steps to work and grow with Finnotive family!!!</string>
    <string name="enddate">enddate</string>
    <string name="groupd">groupid</string>
    <string name="startdate">startdate</string>
    <string name="home">Home</string>
    <string name="result_board">Result Board</string>
    <string name="wallet">Wallet</string>
    <string name="claim_wallet">Claim Wallet</string>
    <string name="help_desk">Help Desk</string>
    <string name="referral_income">Referral Income</string>
    <string name="growth">growth</string>
    <string name="profile">Profile</string>
    <string name="buy_share">Buy share</string>
    <string name="i_wallet">I-Wallet</string>
    <string name="e_wallet">E-wallet</string>
    <string name="withdraw">withdraw</string>
    <string name="i_to_e">I to E</string>
    <string name="top_up">Top Up</string>
    <string name="bank_request">Bank Request</string>
    <string name="amount">Amount</string>
    <string name="recipient_id">Recipient_id</string>
    <string name="groupid">GroupId  -  </string>
    <string name="referral_id">Referral id</string>
    <string name="status">Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_are_not_part_of_any_group_please_join_an_open_group">You are not part of any group please join an Open group</string>
    <string name="timer">day : Hour : Min : Sec</string>
    <string name="time">00 days</string>

</resources>
