<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/helpdesk"
        android:orderInCategory="100"
        android:title="@string/helpdesk"
        
        app:showAsAction="never" />
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"

        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/payhistory"
        android:orderInCategory="100"
        android:title="Payment History"
        app:showAsAction="never" />
    <item
        android:id="@+id/withhistory"
        android:orderInCategory="100"
        android:title="Bank History"
        app:showAsAction="never" />
</menu>
