<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_xlarge"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@mipmap/finna"
            android:tint="@color/orange_400" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/orange_50"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/edt_ractangle_back"
            android:id="@+id/usernamelogin"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/orange_50"
            android:textColorHint="@color/deep_orange_A700"
            android:theme="@style/EditText.Grey" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/orange_50"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginpassword"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/edt_ractangle_back"
            android:inputType="textPassword"

            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/orange_50"
            android:textColorHint="@color/deep_orange_A700"
            android:theme="@style/EditText.Grey" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginTop="@dimen/spacing_medium"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/orange_50"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/btn_rounded_green_300"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/blue_grey_900" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/orange_50" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/orange_400"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>