<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_xlarge"
    android:background="@color/background"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/finna"
                android:tint="@color/orange_400"
                android:contentDescription="@string/todo" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xlarge" />



            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/orange_50"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/edt_ractangle_back"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/deep_orange_A700"
                android:textColor="@color/orange_50"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/orange_50"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/edt_ractangle_back"
                android:id="@+id/mobile"
                android:inputType="phone"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/deep_orange_A700"
                android:textColor="@color/orange_50"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/orange_50"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/edt_ractangle_back"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/deep_orange_A700"
                android:textColor="@color/orange_50"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/con_pass"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/orange_50"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/edt_ractangle_back"
                android:id="@+id/reenterpassword"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/deep_orange_A700"
                android:textColor="@color/orange_50"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reffercode"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/orange_50"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/edt_ractangle_back"
                android:inputType="text"
                android:id="@+id/reffercode"
                android:maxLength="50"
                android:textColorHint="@color/deep_orange_A700"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/orange_50"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />
            <LinearLayout
                android:layout_width="match_parent"
               android:layout_gravity="center"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:buttonTint="@color/orange_50"
                    android:layout_height="wrap_content"
                    android:id="@+id/accept_term"
                    tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/spacing_medium"
                android:clickable="true"
                android:text="@string/terms_and_conditions"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/orange_50"
                android:textStyle="bold"
                android:focusable="true" />
        </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/btn_rounded_green_300"
                android:id="@+id/signup"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/blue_grey_900" />


        </LinearLayout>



</ScrollView>