<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    tools:context=".ui.tools.mybusiness">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        android:src="@mipmap/finna"
        android:layout_marginTop="60dp"
        android:tint="@color/orange_400" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/orange_400"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/referral_id"
            android:textSize="@dimen/textsp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_weight="1"
            android:textSize="@dimen/textsp"
            android:textColor="@color/orange_400"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:layout_marginTop="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_weight="1"
            android:textColor="@color/orange_400"
            android:textSize="@dimen/textsp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:text="1234"
            android:textSize="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Active"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2000"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"

        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:text="3456"
            android:textSize="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inactive"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3000"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            />
    </LinearLayout>



</LinearLayout>